changed to having emojis back on smaller screen and fixed padding on full screen between app-name and emojis

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,14 @@ h1 {
   padding: 2.4rem 0;
 }
 
+.suitcase {
+  padding-right: 20px;
+}
+
+.island {
+  padding-left: 13px;
+}
+
 .add-form {
   background-color: #e5771f;
   padding: 2.8rem 0;
